--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
